改进了构建配置。 改进了Windows API的符号解析。